objects/General_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>General custom setting of the org</description>
    <fields>
        <fullName>ACE_Url__c</fullName>
        <label>ACE Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Assignment_Log_Report__c</fullName>
        <description>Link to BO Report that pulls the selected account assignment log from CDS for the past 20 days</description>
        <inlineHelpText>CDS Account Assignment Log last 20 days</inlineHelpText>
        <label>Account Assignment Log Report</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnswersPreviewBaseUrl__c</fullName>
        <label>AnswersPreviewBaseUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>BatchSizeForForwardingCasesToDistributor__c</fullName>
        <label>BatchSizeForForwardingCasesToDistributor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BatchSizeForOpportunityAssignmentManager__c</fullName>
        <label>BatchSizeForOpportunityAssignmentManager</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Schedule_Time_Territory2Trigge__c</fullName>
        <label>Batch_Schedule_Time_Territory2Trigge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Size_For_Territory2Trigger__c</fullName>
        <description>Batch size for synching account fields related to territory2 when territory2 fields get update.</description>
        <label>Batch_Size_For_Territory2Trigger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Assignment_Of_Account_To_Territor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be used to bypass calling method &apos;assignAccountsToTerritory&apos;  of TerritoryAssignmentManager from AccountTriggerHandler</description>
        <inlineHelpText>Bypass Assignment of Account to territory</inlineHelpText>
        <label>Bypass Assignment Of Account To Territor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CDSBaseUrl__c</fullName>
        <label>CDSBaseUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CDS_IsChanged_Interval__c</fullName>
        <description>Example: 0.000347222 days = 30 seconds</description>
        <inlineHelpText>Number of seconds (expressed as a fraction of a day) to allow as a difference between the isAddressChanged and isAccountChanged and the LastModifiedDate and still return true for the flags.</inlineHelpText>
        <label>CDS IsChanged Interval</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CaseDeflectionOwnerQueueName__c</fullName>
        <label>CaseDeflectionOwnerQueueName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseDeleteOverride_Excluded_Profile_1__c</fullName>
        <label>CaseDeleteOverride Excluded Profile 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseDeleteOverride_Excluded_Profile_2__c</fullName>
        <label>CaseDeleteOverride Excluded Profile 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Domain__c</fullName>
        <label>Current Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Opportunity_Owner__c</fullName>
        <description>Default  opportunity owner will be  used in custom lead conversion page for setting default owner for converted opportunity.</description>
        <inlineHelpText>Should be the User&apos;s Alias (to account for differences in querying by name in different locales)</inlineHelpText>
        <label>Default Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailRoutingRule_Current_ResponseTo__c</fullName>
        <label>EmailRoutingRule Current ResponseTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emailaddress_Territory2Dml__c</fullName>
        <description>Email address for sending mail for territory2dml class</description>
        <label>Emailaddress _Territory2Dml</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_To_Dev_Email__c</fullName>
        <label>Escalate To Dev Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForwardCToDistributorSchedulableInterval__c</fullName>
        <label>ForwardCToDistributorSchedulableInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gecko_Escalation_URL_View__c</fullName>
        <label>Gecko Escalation URL View</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Gecko_Escalation_URL__c</fullName>
        <label>Gecko Escalation URL Create</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>HideCheckBoxForDoNotCreateActivity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Opportunity Owner Search Box from Lead Conversion Page</description>
        <inlineHelpText>Hide Opportunity Owner Search Box from Lead Conversion Page</inlineHelpText>
        <label>HideCheckBoxForDoNotCreateActivity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideCheckBoxForSendEmailNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide check box for &quot;Send Email Notification&quot; from Lead Conversion Page</description>
        <inlineHelpText>Hide check box for &quot;Send Email Notification&quot; from Lead Conversion Page</inlineHelpText>
        <label>HideCheckBoxForSendEmailNotification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideOpportunityOwnerSearchBox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide &quot;Opportunity Owner&quot; search box from Lead Conversion Page</description>
        <inlineHelpText>Hide &quot;Opportunity Owner&quot; search box from Lead Conversion Page</inlineHelpText>
        <label>HideOpportunityOwnerSearchBox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ORC_Url__c</fullName>
        <description>URL to open ORC Application from the Contact Page</description>
        <label>ORC Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OnSupportURL__c</fullName>
        <description>End point URL to call OnSupport REST API service</description>
        <label>OnSupportURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Preference_Center__c</fullName>
        <label>Open Preference Center</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date_From_Case__c</fullName>
        <description>Opportunity Close Date Which is used for populated Opportunity close Date From Button available on Case</description>
        <label>Opportunity Close Date From Case</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Close_Date__c</fullName>
        <label>Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RTToIncludeAddingProjTeamMemberOnInsert__c</fullName>
        <description>Record type names for Including adding owner to project Team member on Project Insert (Project Trigger Handler-OnAfterInsert)</description>
        <label>RTToIncludeAddingProjTeamMemberOnInsert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegEx_Latin__c</fullName>
        <label>RegEx_Latin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegEx_To_Check_ID__c</fullName>
        <label>RegEx_To_Check_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Research_Team_Owner__c</fullName>
        <description>this will be used in role based opportunity assignment</description>
        <inlineHelpText>Should be the User&apos;s Alias (to account for differences in querying by name in different locales)</inlineHelpText>
        <label>Research Team Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuggestedContentDisplaySummary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SuggestedContentDisplaySummary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SuggestedContentLimit__c</fullName>
        <description>Specifies the limit number of suggested content search</description>
        <inlineHelpText>Specifies the limit number of suggested content search</inlineHelpText>
        <label>SuggestedContentLimit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SuggestedContentRedirectUrl__c</fullName>
        <label>SuggestedContentRedirectUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuggestedContentSummaryLength__c</fullName>
        <label>SuggestedContentSummaryLength</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SuggestedContentUrlPostfix__c</fullName>
        <label>SuggestedContentUrlPostfix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferActivitiesIntegrationUserName__c</fullName>
        <label>TransferActivitiesIntegrationUserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>General Settings</label>
</CustomObject>